// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate the application test app compile 1`] = `
Array [
  Array [
    "Compile:
 output: %s
 compress: %s
 files:
  %s 

",
    "./temp",
    "false",
    "./Samples/cities.txt",
  ],
  Array [
    "Process \\"%s\\" to \\"%s\\"",
    "./Samples/cities.txt",
    "./temp/cities.txt",
  ],
  Array [
    "Done \\"%s\\" to \\"%s\\"",
    "./Samples/cities.txt",
    "./temp/cities.txt",
  ],
  Array [
    "Complete.",
  ],
]
`;

exports[`Validate the application test app compile-trie 1`] = `
Array [
  Array [
    "Compile:
 output: %s
 compress: %s
 files:
  %s 

",
    "./temp",
    "false",
    "./Samples/cities.txt",
  ],
  Array [
    "Process \\"%s\\" to \\"%s\\"",
    "./Samples/cities.txt",
    "./temp/cities.trie",
  ],
  Array [
    "Complete.",
  ],
]
`;
